[gd_scene load_steps=15 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://Shaders/PixelateShader.tres" type="Material" id=2]
[ext_resource path="res://Map Resources/Player/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://Map Resources/Player/ShaderController.gd" type="Script" id=4]
[ext_resource path="res://Textures/Light/light.png" type="Texture" id=5]
[ext_resource path="res://Map Resources/Weapons/RangedWeapons/RangedWeaponBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/GUI/Health/Full Health.png" type="Texture" id=7]
[ext_resource path="res://Textures/GUI/Health/No Health.png" type="Texture" id=8]
[ext_resource path="res://Map Resources/Player/HealthDisplay.gd" type="Script" id=9]
[ext_resource path="res://Map Resources/Player/PointsDisplay.gd" type="Script" id=10]
[ext_resource path="res://Map Resources/Player/ManaDisplay.gd" type="Script" id=11]
[ext_resource path="res://Textures/GUI/Mana/Mana.png" type="Texture" id=12]
[ext_resource path="res://Textures/GUI/Mana/No Mana.png" type="Texture" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 3 )
camera_path = NodePath("ViewportContainer/Viewport/Camera")
player_path = NodePath(".")
hand_path = NodePath("ViewportContainer/Viewport/Camera/Hand")
interact_raycast_path = NodePath("InteractRayCast")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="InteractRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 2
collide_with_areas = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
light2d_path = NodePath("Light2D")
enviroment = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
environment = ExtResource( 1 )
current = true

[node name="Hand" type="Spatial" parent="ViewportContainer/Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.175, -0.25 )

[node name="RangedWeaponBase" parent="ViewportContainer/Viewport/Camera/Hand" instance=ExtResource( 6 )]

[node name="Light2D" type="Light2D" parent="ViewportContainer"]
position = Vector2( 960.348, 539.104 )
scale = Vector2( 7.5147, 4.21679 )
texture = ExtResource( 5 )
texture_scale = 4.0
mode = 2

[node name="HealthDisplay" type="Control" parent="ViewportContainer"]
margin_left = 250.0
margin_top = 850.0
margin_right = 290.0
margin_bottom = 890.0
script = ExtResource( 9 )
health_bar_path = NodePath("HealthBar")
health_lable_path = NodePath("HealthLabel")

[node name="HealthBar" type="TextureProgress" parent="ViewportContainer/HealthDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -144.0
margin_right = 162.0
margin_bottom = 144.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="ViewportContainer/HealthDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -17.0
margin_bottom = -6.0
rect_scale = Vector2( 3, 3 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaDisplay" type="Control" parent="ViewportContainer"]
margin_left = 550.0
margin_top = 850.0
margin_right = 590.0
margin_bottom = 890.0
script = ExtResource( 11 )
mana_bar_path = NodePath("ManaBar")
mana_lable_path = NodePath("ManaLabel")

[node name="ManaBar" type="TextureProgress" parent="ViewportContainer/ManaDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -144.0
margin_right = 162.0
margin_bottom = 144.0
value = 100.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 12 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaLabel" type="Label" parent="ViewportContainer/ManaDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -17.0
margin_bottom = -6.0
rect_scale = Vector2( 3, 3 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsDisplay" type="Control" parent="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
points_path = NodePath("PointsLabel")

[node name="PointsLabel" type="Label" parent="ViewportContainer/PointsDisplay"]
margin_left = 40.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 54.0
rect_scale = Vector2( 3, 3 )
text = "Points: "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="health_changed" from="." to="ViewportContainer" method="_on_Player_health_changed"]
[connection signal="health_changed" from="." to="ViewportContainer/HealthDisplay" method="_on_Player_health_changed"]
[connection signal="mana_changed" from="." to="ViewportContainer/ManaDisplay" method="_on_Player_mana_changed"]
[connection signal="player_dead" from="." to="ViewportContainer" method="_on_Player_player_dead"]
